@@ -105,6 +105,10 @@ public class ExactStatData implements ISerializable<ExactStatData>, IApplyableSt
 
     public float percentIncrease = 0;
 
+    public String getStatId() {
+        return stat_id;
+    }
+
     public float getAverageValue() {
         return (first_val + second_val) / 2F;
     }
